change to passing in search engine client

--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -41,26 +41,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run in Solr mode\n",
-    "By default the LTR examples run against Elastic.  The following snippet switches things to Solr mode."
+    "### Create the LTR Client\n",
+    "\n",
+    "Instantiate a Solr client, so we talk to LtR with Solrese"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Switched to Solr client_mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ltr import useSolr\n",
-    "useSolr()"
+    "from ltr.client.solr_client import SolrClient\n",
+    "client = SolrClient()"
    ]
   },
   {
@@ -79,158 +72,216 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted index: tmdb [Status: 200]\n",
-      "Created index: tmdb [Status: 200]\n",
+      "RUNNING INDEXING...\n",
+      "DO IT!\n",
+      "Deleted index tmdb [Status: 200]\n",
+      "Created index tmdb [Status: 200]\n",
       "Indexing 27846 documents\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 67456\n",
       "Skipping 67479\n",
       "Skipping 133252\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 211779\n",
       "Skipping 200039\n",
       "Skipping 69372\n",
       "Skipping 69487\n",
       "Skipping 164721\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 124531\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 202855\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 110639\n",
       "Skipping 205300\n",
       "Skipping 74309\n",
       "Skipping 206216\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 10700\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 273740\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 13057\n",
       "Skipping 264330\n",
       "Skipping 13716\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 276690\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 68149\n",
       "Skipping 211877\n",
       "Skipping 15533\n",
       "Skipping 15594\n",
       "Skipping 15738\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 82205\n",
       "Skipping 82400\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 17882\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 166918\n",
       "Skipping 156078\n",
       "Skipping 19341\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 151153\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 20892\n",
       "Skipping 21680\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 24219\n",
       "Skipping 24549\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 222481\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 244797\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 355551\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 29133\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 147269\n",
       "Skipping 31653\n",
       "Skipping 162806\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 230657\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 136991\n",
       "Skipping 166986\n",
       "Skipping 101517\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 298573\n",
       "Skipping 37106\n",
       "Skipping 168332\n",
       "Skipping 233984\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 37525\n",
       "Skipping 169224\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 301231\n",
       "Skipping 170359\n",
       "Skipping 225130\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 94174\n",
       "Skipping 172538\n",
       "Skipping 238386\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 239163\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 110414\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 113879\n",
       "Skipping 114049\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 78057\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 313289\n",
       "Skipping 314040\n",
       "Skipping 51982\n",
       "Skipping 248785\n",
       "Skipping 281788\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 53285\n",
       "Skipping 53803\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 12773\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 252993\n",
       "Skipping 252995\n",
       "Skipping 253768\n",
       "Skipping 57290\n",
       "Skipping 253941\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 58423\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 191903\n",
       "Skipping 61917\n",
       "Skipping 61919\n",
       "Skipping 61920\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 62582\n",
       "Skipping 62653\n",
       "Skipping 185441\n",
       "Flushing 500 movies\n",
+      "Done [Status: 200]\n",
       "Skipping 64699\n",
       "Flushing 260 movies\n",
+      "Done [Status: 200]\n",
       "Done\n"
      ]
     }
    ],
    "source": [
     "from ltr import index\n",
-    "index.run()"
+    "index.run(client)"
    ]
   },
   {
@@ -250,13 +301,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted classic model: 200\n",
-      "Deleted genre model: 200\n",
-      "Deleted latest model: 200\n",
-      "Delete _DEFAULT feature store: 200\n",
-      "Delete genre feature store: 200\n",
-      "Delete release feature store: 200\n",
-      "Created release feature store under tmdb: 200\n"
+      "Deleted classic model [Status: 200]\n",
+      "Deleted genre model [Status: 200]\n",
+      "Deleted latest model [Status: 200]\n",
+      "Deleted title model [Status: 200]\n",
+      "Deleted title_fuzzy model [Status: 200]\n",
+      "Deleted _DEFAULT Featurestore [Status: 200]\n",
+      "Deleted genre Featurestore [Status: 200]\n",
+      "Deleted release Featurestore [Status: 200]\n",
+      "Deleted title Featurestore [Status: 200]\n",
+      "Deleted title_fuzzy Featurestore [Status: 200]\n",
+      "Created release feature store under tmdb: [Status: 200]\n"
      ]
     }
    ],
@@ -274,7 +329,7 @@
     "\n",
     "\n",
     "from ltr import setup_ltr\n",
-    "setup_ltr.run(config=config, featureset='release')"
+    "setup_ltr.run(client, config=config, featureset='release')"
    ]
   },
   {
@@ -300,13 +355,15 @@
      "output_type": "stream",
      "text": [
       "Generating ratings for classic and latest model\n",
+      "Searching tmdb [Status: 200]\n",
       "Done\n"
      ]
     }
    ],
    "source": [
     "from ltr import years_as_ratings\n",
-    "years_as_ratings.run(featureSet='release',\n",
+    "years_as_ratings.run(client, \n",
+    "                     featureSet='release',\n",
     "                     classicTrainingSetOut='data/classic-training.txt',\n",
     "                     latestTrainingSetOut='data/latest-training.txt')"
    ]
@@ -338,18 +395,20 @@
      "text": [
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/latest-training.txt -save data/latest_model.txt\n",
       "DONE\n",
-      "Deleted latest model [200]\n",
-      "PUT latest model under release: 200\n",
+      "Submit Model latest Ftr Set release [Status: 200]\n",
+      "Deleted Model latest [Status: 200]\n",
+      "Created Model latest [Status: 200]\n",
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/classic-training.txt -save data/classic_model.txt\n",
       "DONE\n",
-      "Deleted classic model [200]\n",
-      "PUT classic model under release: 200\n"
+      "Submit Model classic Ftr Set release [Status: 200]\n",
+      "Deleted Model classic [Status: 200]\n",
+      "Created Model classic [Status: 200]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ltr.train.TrainingLog at 0x12bca78d0>"
+       "<ltr.train.TrainingLog at 0x11b59bb70>"
       ]
      },
      "execution_count": 6,
@@ -359,8 +418,8 @@
    ],
    "source": [
     "from ltr import train\n",
-    "train.run(trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
-    "train.run(trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
+    "train.run(client=client, trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
+    "train.run(client=client, trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
    ]
   },
   {
@@ -389,6 +448,14 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search keywords - title:(batman)^0 [Status: 200]\n",
+      "Search keywords - title:(batman)^0 [Status: 200]\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -401,7 +468,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "142ee0be-6cc2-46ae-a32a-7cf301c1af87",
+         "uid": "e1a5209b-2fed-4f5c-bd18-7d39407d2667",
          "x": [
           0,
           1,
@@ -445,16 +512,16 @@
           2012,
           2010,
           2005,
+          1997,
           2011,
           2010,
           2008,
           2009,
-          2008,
-          1997,
-          1998,
-          1998,
           2005,
+          1998,
+          1998,
           2003,
+          2008,
           2013,
           1993,
           1995,
@@ -471,7 +538,7 @@
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "c6a76b08-9cce-4703-b300-408bc7d182b0",
+         "uid": "2f10ff13-ff16-423c-92e6-092a4e71e935",
          "x": [
           0,
           1,
@@ -519,20 +586,20 @@
           2000,
           2010,
           2005,
+          1993,
+          1997,
           2010,
+          1992,
           2008,
           2009,
-          2008,
           1995,
-          1997,
-          1998,
-          1998,
           2005,
+          1998,
+          1998,
           2003,
-          1993,
-          1992,
-          1949,
+          2008,
           1966,
+          1949,
           1943,
           1989
          ]
@@ -541,18 +608,18 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"09306a2b-bc3e-4c66-9527-ca4a6e810882\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {\n",
-       "    Plotly.newPlot(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 2011, 2010, 2008, 2009, 2008, 1997, 1998, 1998, 2005, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"142ee0be-6cc2-46ae-a32a-7cf301c1af87\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 2010, 2008, 2009, 2008, 1995, 1997, 1998, 1998, 2005, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"c6a76b08-9cce-4703-b300-408bc7d182b0\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"5ad4c710-6f90-4ad3-a400-07a958c76717\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"5ad4c710-6f90-4ad3-a400-07a958c76717\")) {\n",
+       "    Plotly.newPlot(\"5ad4c710-6f90-4ad3-a400-07a958c76717\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 1997, 2011, 2010, 2008, 2009, 2005, 1998, 1998, 2003, 2008, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"e1a5209b-2fed-4f5c-bd18-7d39407d2667\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 1993, 1997, 2010, 1992, 2008, 2009, 1995, 2005, 1998, 1998, 2003, 2008, 1966, 1949, 1943, 1989], \"type\": \"scatter\", \"uid\": \"2f10ff13-ff16-423c-92e6-092a4e71e935\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {window._Plotly.Plots.resize(document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"5ad4c710-6f90-4ad3-a400-07a958c76717\")) {window._Plotly.Plots.resize(document.getElementById(\"5ad4c710-6f90-4ad3-a400-07a958c76717\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"09306a2b-bc3e-4c66-9527-ca4a6e810882\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {\n",
-       "    Plotly.newPlot(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 2011, 2010, 2008, 2009, 2008, 1997, 1998, 1998, 2005, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"142ee0be-6cc2-46ae-a32a-7cf301c1af87\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 2010, 2008, 2009, 2008, 1995, 1997, 1998, 1998, 2005, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"c6a76b08-9cce-4703-b300-408bc7d182b0\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"5ad4c710-6f90-4ad3-a400-07a958c76717\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"5ad4c710-6f90-4ad3-a400-07a958c76717\")) {\n",
+       "    Plotly.newPlot(\"5ad4c710-6f90-4ad3-a400-07a958c76717\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 1997, 2011, 2010, 2008, 2009, 2005, 1998, 1998, 2003, 2008, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"e1a5209b-2fed-4f5c-bd18-7d39407d2667\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 1993, 1997, 2010, 1992, 2008, 2009, 1995, 2005, 1998, 1998, 2003, 2008, 1966, 1949, 1943, 1989], \"type\": \"scatter\", \"uid\": \"2f10ff13-ff16-423c-92e6-092a4e71e935\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {window._Plotly.Plots.resize(document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"5ad4c710-6f90-4ad3-a400-07a958c76717\")) {window._Plotly.Plots.resize(document.getElementById(\"5ad4c710-6f90-4ad3-a400-07a958c76717\"));};})</script>"
       ]
      },
      "metadata": {},
@@ -561,7 +628,7 @@
    ],
    "source": [
     "from ltr import plot\n",
-    "plot.run()"
+    "plot.run(client)"
    ]
   },
   {
@@ -598,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
