Change 'collect_features' -> 'log'

--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -28497,23 +28497,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'client' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b35b9eb6ccc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect_features\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjudgments_to_training_set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m trainingSet = judgments_to_training_set(client,\n\u001b[0m\u001b[1;32m      3\u001b[0m                                         \u001b[0mjudgmentInFile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/genre_by_date_judgments.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                         \u001b[0mtrainingOutFile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/genre_by_date_judgments_train.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                         featureSet='genre')\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'client' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recognizing 2 queries...\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "REBUILDING TRAINING DATA for Science Fiction (0/2)\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "Searching tmdb - [{'terms': {'_id': [ [Status: 200]\n",
+      "REBUILDING TRAINING DATA for Drama (1/2)\n"
      ]
     }
    ],
    "source": [
-    "from ltr.collect_features import judgments_to_training_set\n",
+    "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client,\n",
     "                                        judgmentInFile='data/genre_by_date_judgments.txt', \n",
     "                                        trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
@@ -28645,7 +28655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -28686,7 +28696,7 @@
    ],
    "source": [
     "from ltr import date_genre_judgments\n",
-    "from ltr.collect_features import judgments_to_training_set\n",
+    "from ltr.log import judgments_to_training_set\n",
     "date_genre_judgments.buildJudgments(client,\n",
     "                                    judgmentsFile='data/genre_by_date_judgments.txt',\n",
     "                                    autoNegate=True)\n",
