same method name as module per Python style guideline

--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,8 +328,8 @@
     "]\n",
     "\n",
     "\n",
-    "from ltr import setup_ltr\n",
-    "setup_ltr.run(client, config=config, featureset='release')"
+    "from ltr.setup import setup\n",
+    "setup(client, config=config, featureset='release')"
    ]
   },
   {
