--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28410,8 +28410,8 @@
     "}\n",
     "\n",
     "\n",
-    "from ltr import setup_ltr\n",
-    "setup_ltr.run(client, config=config, featureset='release')"
+    "from ltr.setup import setup\n",
+    "setup(client, config=config, featureset='release')"
    ]
   },
   {
