--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +385,8 @@
     "]\n",
     "\n",
     "\n",
-    "from ltr import setup_ltr\n",
-    "setup_ltr.run(client, config=config, featureset='genre')"
+    "from ltr.setup import setup\n",
+    "setup(client, config=config, featureset='genre')"
    ]
   },
   {
