--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -28482,8 +28482,8 @@
     "    }\n",
     "}\n",
     "\n",
-    "from ltr import setup_ltr\n",
-    "setup_ltr.run(client, config=config, featureset='genre')"
+    "from ltr.setup import setup\n",
+    "setup(client, config=config, featureset='genre')"
    ]
   },
   {
