Change from run to methods same name as module

--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28460,38 +28460,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/latest-training.txt -save data/latest_model.txt\n",
-      "DONE\n",
-      "Delete model latest: 404\n",
-      "Created Model latest [Status: 201]\n",
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/classic-training.txt -save data/classic_model.txt\n",
-      "DONE\n",
-      "Delete model classic: 404\n",
-      "Created Model classic [Status: 201]\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-73187463e8b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrainingInFile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/latest-training.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'release'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latest'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrainingInFile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/classic-training.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'release'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'classic'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'train'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<ltr.train.TrainingLog at 0x10e298e10>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ltr import train\n",
-    "train.run(client, trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
-    "train.run(client, trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
+    "from ltr.train import train\n",
+    "train(client, trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
+    "train(client, trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
    ]
   },
   {
@@ -28699,7 +28686,7 @@
     }
    ],
    "source": [
-    "from ltr import plot\n",
+    "from ltr.release_date_plot import plot\n",
     "plot.run(client)"
    ]
   },
