--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -453,21 +453,21 @@
       "Created Model genre [Status: 200]\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 84672139.80027786\n",
-      "2 - 57048.53838040621\n",
-      "3 - 15085.984030299318\n",
-      "4 - 0.0\n",
+      "4 - 178579056.50291184\n",
+      "1 - 107974596.42237584\n",
+      "3 - 14215772.384097328\n",
+      "2 - 7654167.426058862\n",
       "Perfect NDCG! 1.0\n"
      ]
     }
    ],
    "source": [
-    "from ltr import train\n",
-    "trainLog = train.run(client, \n",
-    "                     trainingInFile='data/genre_by_date_judgments_train.txt',\n",
-    "                     metric2t='NDCG@10',\n",
-    "                     featureSet='genre',\n",
-    "                     modelName='genre')\n",
+    "from ltr.train import train\n",
+    "trainLog = train(client, \n",
+    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 metric2t='NDCG@10',\n",
+    "                 featureSet='genre',\n",
+    "                 modelName='genre')\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -529,8 +529,8 @@
     }
    ],
    "source": [
-    "from ltr import search\n",
-    "search.run(client, keywords=\"Science Fiction\", modelName=\"genre\")"
+    "from ltr.search import search\n",
+    "search(client, keywords=\"Science Fiction\", modelName=\"genre\")"
    ]
   },
   {
@@ -604,12 +604,12 @@
     "                          trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
     "                          featureSet='genre')\n",
     "\n",
-    "from ltr import train\n",
-    "trainLog = train.run(client,\n",
-    "                     trainingInFile='data/genre_by_date_judgments_train.txt',\n",
-    "                     metric2t='NDCG@10',\n",
-    "                     featureSet='genre',\n",
-    "                     modelName='genre')\n",
+    "from ltr.train import train\n",
+    "trainLog = train(client,\n",
+    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 metric2t='NDCG@10',\n",
+    "                 featureSet='genre',\n",
+    "                 modelName='genre')\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -672,8 +672,8 @@
     }
    ],
    "source": [
-    "from ltr import search\n",
-    "search.run(client, keywords=\"Drama\", modelName=\"genre\")"
+    "from ltr.search import search\n",
+    "search(client, keywords=\"Drama\", modelName=\"genre\")"
    ]
   },
   {
