--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -28541,6 +28541,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -28563,12 +28570,12 @@
     }
    ],
    "source": [
-    "from ltr import train\n",
-    "trainLog = train.run(client,\n",
-    "                     trainingInFile='data/genre_by_date_judgments_train.txt',\n",
-    "                     metric2t='NDCG@10',\n",
-    "                     featureSet='genre',\n",
-    "                     modelName='genre')\n",
+    "from ltr.train import train\n",
+    "trainLog = train(client,\n",
+    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 metric2t='NDCG@10',\n",
+    "                 featureSet='genre',\n",
+    "                 modelName='genre')\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -28588,51 +28595,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
-      "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
-      "A Man There Was \n",
-      "8.84513 \n",
-      "1917 \n",
-      "['Drama'] \n",
-      "Terje Vigen, a sailor, suffers the loss of his family through the cruelty of another man. Years later, when his enemy's family finds itself dependent on Terje's benevolence, Terje must decide whether to avenge himself. \n",
-      "---------------------------------------\n",
-      "The Immigrant \n",
-      "8.84513 \n",
-      "1917 \n",
-      "['Comedy', 'Drama'] \n",
-      "Charlie is an immigrant who endures a challenging voyage and gets into trouble as soon as he arrives in America. \n",
-      "---------------------------------------\n",
-      "The Cabinet of Dr. Caligari \n",
-      "8.844578 \n",
-      "1920 \n",
-      "['Drama', 'Horror', 'Thriller', 'Crime'] \n",
-      "The Cabinet of Dr. Caligari is eerie and expressionistic, silent and surreal. It has become not only a classic of German Expressionist cinema, but a landmark in film history, with creative scenery and an unusual ending. \n",
-      "---------------------------------------\n",
-      "The Last of the Mohicans \n",
-      "8.844578 \n",
-      "1920 \n",
-      "['Adventure', 'Drama', 'Action', 'History'] \n",
-      "As Alice and Cora Munro attempt to find their father, a British officer in the French and Indian War, they are set upon by French soldiers and their cohorts, Huron tribesmen led by the evil Magua. Fighting to rescue the women are Chingachgook and his son Uncas, the last of the Mohican tribe, and their white ally, the frontiersman Natty Bumppo, known as Hawkeye. \n",
-      "---------------------------------------\n",
-      "Within Our Gates \n",
-      "8.844578 \n",
-      "1920 \n",
-      "['Drama', 'Romance'] \n",
-      "Abandoned by her fiancé, an educated negro woman with a shocking past dedicates herself to helping a near bankrupt school for impoverished negro youths. \n",
-      "---------------------------------------\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'search'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-891cda2f3dcf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeywords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Science Fiction\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"genre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'search'"
      ]
     }
    ],
    "source": [
-    "from ltr import search\n",
-    "search.run(client, keywords=\"Science Fiction\", modelName=\"genre\")"
+    "from ltr.search import search\n",
+    "search(client, keywords=\"Science Fiction\", modelName=\"genre\")"
    ]
   },
   {
@@ -28706,12 +28686,12 @@
     "                          trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
     "                          featureSet='genre')\n",
     "\n",
-    "from ltr import train\n",
-    "trainLog = train.run(client,\n",
-    "                     trainingInFile='data/genre_by_date_judgments_train.txt',\n",
-    "                     metric2t='NDCG@10',\n",
-    "                     featureSet='genre',\n",
-    "                     modelName='genre')\n",
+    "from ltr.train import train\n",
+    "trainLog = train(client,\n",
+    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 metric2t='NDCG@10',\n",
+    "                 featureSet='genre',\n",
+    "                 modelName='genre')\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -28732,51 +28712,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Drama\"}, \"model\": \"genre\"}}}\n",
-      "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
-      "A Man There Was \n",
-      "3.9405797 \n",
-      "1917 \n",
-      "['Drama'] \n",
-      "Terje Vigen, a sailor, suffers the loss of his family through the cruelty of another man. Years later, when his enemy's family finds itself dependent on Terje's benevolence, Terje must decide whether to avenge himself. \n",
-      "---------------------------------------\n",
-      "The Immigrant \n",
-      "3.9405797 \n",
-      "1917 \n",
-      "['Comedy', 'Drama'] \n",
-      "Charlie is an immigrant who endures a challenging voyage and gets into trouble as soon as he arrives in America. \n",
-      "---------------------------------------\n",
-      "The Birth of a Nation \n",
-      "3.9393175 \n",
-      "1915 \n",
-      "['War', 'Drama', 'History', 'Romance'] \n",
-      "The Birth of A Nation is a silent film from 1915 and the highest grossing silent film in film history. The film tells a romance story during the American civil war. D.W. Griffith invested heavily in its high production values, pioneering many new camera effects. The Birth of a Nation was strongly protested for its negative portrayal of newly freed slaves (mostly white actors in blackface), which went on to create and propagate negative images of blacks of the early 20th century in the United States. The film was used as a recruiting propaganda by the KKK until the 1940s. \n",
-      "---------------------------------------\n",
-      "Blacksmith Scene \n",
-      "3.9393175 \n",
-      "1893 \n",
-      "['Drama'] \n",
-      "Three men hammer on an anvil and pass a bottle of beer around. Notable for being the first film in which a scene is being acted out. \n",
-      "---------------------------------------\n",
-      "Cabiria \n",
-      "3.9393175 \n",
-      "1914 \n",
-      "['Drama', 'History'] \n",
-      "Three centuries before Christus. Young Cabiria is kidnapped by some pirates during one eruption of the Etna. She is sold as a slave in Carthage, and as she is just going to be sacrificed to god Moloch, Cabiria is rescued by both Fulvio Axilla, a Roman noble, and his giant slave Maciste. Maciste is captured just after having confided Cabiria to Sophinisbe's safe keeping, while Fulvio Axilla manages to escape from Carthage. Ten years went away with Punic wars before he is able to come back to Carthage... \n",
-      "---------------------------------------\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'search'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-24da62461c07>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeywords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Drama\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"genre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'search'"
      ]
     }
    ],
    "source": [
-    "from ltr import search\n",
-    "search.run(client, keywords=\"Drama\", modelName=\"genre\")"
+    "from ltr.search import search\n",
+    "search(client, keywords=\"Drama\", modelName=\"genre\")"
    ]
   },
   {
