--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -234,7 +234,7 @@
     "client = SolrClient()\n",
     "\n",
     "from ltr import download, index\n",
-    "download.run(); index.rebuild_tmdb(client)"
+    "download.download(); index.rebuild_tmdb(client)"
    ]
   },
   {
