--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -28315,7 +28315,7 @@
     "client = ElasticClient()\n",
     "\n",
     "from ltr import download, index\n",
-    "download.run(); index.rebuild_tmdb(client)"
+    "download.download(); index.rebuild_tmdb(client)"
    ]
   },
   {
