--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -33,8 +33,8 @@
     }
    ],
    "source": [
-    "from ltr import download\n",
-    "download.run()"
+    "from ltr.download import download\n",
+    "download()"
    ]
   },
   {
