dunder case judgment generation and rename

--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -28376,8 +28376,8 @@
     }
    ],
    "source": [
-    "from ltr import date_genre_judgments\n",
-    "judgments = date_genre_judgments.buildJudgments(client, judgmentsFile='data/genre_by_date_judgments.txt')"
+    "from ltr.date_genre_judgments import synthesize\n",
+    "judgments = synthesize(client, judgmentsOutFile='data/genre_by_date_judgments.txt')"
    ]
   },
   {
